--- a/ex3.html
+++ b/ex3.html
@@ -22,7 +22,7 @@
 
 <body>
 
-        <a href="ex4.html">홈으로</a>
+        <a href="index.html">홈으로</a>
         <a href="ex1.html">북 배너</a>
         <a href="ex2.html">디스플레이</a>
         <a href="ex3.html">인라인 블록 특성</a>
